DOMjudge Programming Contest Judging System

Version 6.0.0 - DEV
-------------------

Version 5.2.0 - DEV
-------------------
 - [security] bind PHP session cookie to specific web URI to prevent
   sharing sessions between different websites on the same host.
 - [security] Add RUNGROUP configure setting to make sure that submissions
   do not have access to group root files. (#250 thanks Richard Lobb)
 - Allow team to download testcase data marked as 'sample'.
 - Add icons to menu bars.
 - Allow to filter submissions on team, problem, language.
 - Show when a problem can not be judged on any judgehost.
 - Use current contest as default when uploading problem archive.
 - Allow to add user during team creation in UI.
 - Make problem texts always downloadable for jury.
 - Decode HTML entities for proper display of error messages in
   submit client.
 - The event feed and REST API now comply with ICPC WF 2016 specs.
 - Disallow deleting a judgehost that has performed judgings,
   since the dangling reference from the judging table makes
   submissions being rejudged again.
 - Performance: merge jury and public versions of cache database
   tables into single tables. Please refresh scoreboard cache after
   upgrade.
 - Make Linux cgroups a requirement: running Java without it has
   become too painful with memory overheads, also when compiling.
 - Add 'output-limit' verdict.
 - Renamed dj-setup-database to dj_setup_database for consistency
   with other script names.
 - Update ACE editor to version 1.2.6, jQuery to version 2.2.4,
   and JavaScript Cookie to version 2.1.3.
 - Implement better password hashing (#237 thanks Bert Peters).
 - Allow float timelimits (#235).
 - Add filtering to balloons page (#251 thanks Michael Baer).
 - Changed semantics of dj_file_contents_get() optional size argument.
 - Make storage and display limits for output/error files configurable.
 - Changed special case handling of color name/hex conversion functions.